# sonoff-rs

./: Cargo.toml  README.md
sonoff-cli/: Cargo.toml
sonoff-cli/src/: main.rs
sonoff-lib/: Cargo.toml
sonoff-lib/src/: bulb.rs  device.rs  device_common.rs  dimmable.rs  dimmer.rs  lib.rs  mini_r3.rs  power_meter.rs  switch.rs  switchable.rs
