[package]
name = "sonoff-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
sonoff-lib = { path = "../sonoff-lib" }
tokio = { version = "1.28.2", features = ["macros"] }
